<?xml version="1.0"?>
<package format="2">
  <name>beginner_tutorials</name>
  <version>0.0.0</version>
  <description>The beginner_tutorials package</description>

  <maintainer email="bharath@todo.todo">bharath</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  
  
  
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>libpcl-all-dev</build_export_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libpcl-conversions-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>libpcl-conversions-dev</exec_depend>

  <exec_depend>std_msgs</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
